Jeu_de_tests/error/flex_1.tpc

int main(void) {
    int b = 0, c;
    return 0;
}
